--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "SushiBtw",
   "license": "MIT",
   "dependencies": {
+    "@aero/centra": "^1.0.6",
     "ffmpeg-static": "^4.2.7",
     "html-entities": "^1.3.1",
     "merge-options": "^2.0.0",
